gloo-mesh/ec2/manifests/ec2-l4-deny.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ec2-deny
  namespace: ec2-workloads
spec:
  action: DENY
  rules:
  - {}
